JumpScript/tests/baselines/reference/parserSuperExpression4.errors.txt
tests/cases/conformance/parser/ecmascript5/SuperExpressions/parserSuperExpression4.jump(3,9): error TS2335: 'super' can only be referenced in a derived class.
tests/cases/conformance/parser/ecmascript5/SuperExpressions/parserSuperExpression4.jump(10,13): error TS2335: 'super' can only be referenced in a derived class.


==== tests/cases/conformance/parser/ecmascript5/SuperExpressions/parserSuperExpression4.jump (2 errors) ====
    class C {
        private foo() {
            super.foo = 1
            ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
        }
    }
    
    module M1.M2 {
        class C {
            private foo() {
                super.foo = 1
                ~~~~~
!!! error TS2335: 'super' can only be referenced in a derived class.
            }
        }
    }